Attempt to stop bounce on iOS

--- a/style/scss/app.scss
+++ b/style/scss/app.scss
@@ -254,8 +254,9 @@ body,
     margin: 0;
     padding: 0;
     height: 100%;
+    width: 100%;
+    position: fixed;
     overflow: hidden;
-    -webkit-overflow-scrolling: auto;
 }
 
 .dojo {
